@@ -134,9 +134,11 @@
 
     <target name="compile.main.java" depends="generate-lang-parser, generate-task-filter-parser">
         <javac destdir="${dir.build.class.main.java}"
+               source="14"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.main.java}"/>
             <src path="${dir.build.java.smooth-parser}"/>
             <src path="${dir.build.java.task-matcher-parser}"/>
@@ -159,9 +161,11 @@
 
     <target name="compile.slib.java" depends="compile.main.java">
         <javac destdir="${dir.build.class.slib.java}"
+               source="14"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.slib.java}"/>
             <classpath>
                 <path refid="classpath-for.slib.java"/>
@@ -185,9 +189,11 @@
 
     <target name="compile.testing.java" depends="compile.main.java">
         <javac destdir="${dir.build.class.testing.java}"
+               source="14"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.testing.java}"/>
             <classpath>
                 <path refid="classpath-for.testing.java"/>
@@ -222,9 +228,11 @@
 
     <target name="compile.main.test" depends="compile.testing.java">
         <javac destdir="${dir.build.class.main.test}"
+               source="14"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.main.test}"/>
             <classpath>
                 <path refid="classpath-for.main.test"/>
@@ -247,9 +255,11 @@
 
     <target name="compile.slib.test" depends="compile.slib.java, compile.testing.java">
         <javac destdir="${dir.build.class.slib.test}"
+               source="14"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.slib.test}"/>
             <classpath>
                 <path refid="classpath-for.slib.test"/>
@@ -271,9 +281,11 @@
 
     <target name="compile.testing.test" depends="compile.testing.java">
         <javac destdir="${dir.build.class.testing.test}"
+               source="14"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.testing.test}"/>
             <classpath>
                 <path refid="classpath-for.testing.test"/>
@@ -296,9 +308,11 @@
 
     <target name="compile.acceptance.tests" depends="compile.testing.java">
         <javac destdir="${dir.build.class.acceptance}"
+               source="14"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.acceptance}"/>
             <classpath>
                 <path refid="classpath.for.acceptance"/>
@@ -325,6 +339,7 @@
                 <fork>
                     <sysproperty key="junit.jupiter.execution.parallel.enabled" value="true"/>
                     <sysproperty key="junit.jupiter.execution.parallel.mode.default" value="concurrent"/>
+                    <jvmarg value="--enable-preview"/>
                 </fork>
             </testclasses>
         </junitlauncher>
@@ -344,6 +359,7 @@
                 <fork>
                     <sysproperty key="junit.jupiter.execution.parallel.enabled" value="true"/>
                     <sysproperty key="junit.jupiter.execution.parallel.mode.default" value="concurrent"/>
+                    <jvmarg value="--enable-preview"/>
                 </fork>
             </testclasses>
         </junitlauncher>
@@ -363,6 +379,7 @@
                 <fork>
                     <sysproperty key="junit.jupiter.execution.parallel.enabled" value="true"/>
                     <sysproperty key="junit.jupiter.execution.parallel.mode.default" value="concurrent"/>
+                    <jvmarg value="--enable-preview"/>
                 </fork>
             </testclasses>
         </junitlauncher>
@@ -430,6 +447,7 @@
                     <env key="smooth_home_dir" value="${dir.build.acceptance}/${zipped.dir}"/>
                     <env key="repository_dir" value="${basedir}"/>
                     <env key="acceptance-test-mode" value="single-jvm"/>
+                    <jvmarg value="--enable-preview"/>
                 </fork>
             </testclasses>
         </junitlauncher>
@@ -451,6 +469,7 @@
                     <env key="smooth_home_dir" value="${dir.build.acceptance}/${zipped.dir}"/>
                     <env key="repository_dir" value="${basedir}"/>
                     <env key="acceptance-test-mode" value="full-binary"/>
+                    <jvmarg value="--enable-preview"/>
                 </fork>
             </testclasses>
         </junitlauncher>
